# aria2deck

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  aria2_rpc接口文档.md  aria2官方文档.md  docker-compose.yml  main.py  make_iptables.sh  make_tomcat.sh  make_virus.sh  pyproject.toml  审查报告.md  设计约束.md
.github/workflows/: ci.yml  release.yml
PRD_Tracking/: ChangeLogs.md  Design_UX_Enhancement.md  Project_Analysis.md
PRD_Tracking/001/: TodoList.md  design.md  tasks_temp.md
PRD_Tracking/002/: TodoList.md  design.md  tasks_temp.md
PRD_Tracking/003/: TodoList.md  design.md  tasks_temp.md
PRD_Tracking/004/: TodoList.md  design.md  tasks_temp.md
PRD_Tracking/005/: TodoList.md  design.md  tasks_temp.md
backend/: env.example  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: auth.py  database.py  db.py  main.py  models.py  schemas.py
backend/aria2/: .gitignore  README.md  aria2.conf  start.sh  test.sh
backend/data/: app.db-shm  app.db-wal
backend/scripts/: aria2_hook.sh
backend/tests/: conftest.py  test_aria2_errors.py  test_aria2_listener.py  test_aria2_rpc_handler.py  test_database_integrity.py  test_delete_user_cleanup.py  test_hook_space_check.py  test_initial_password.py  test_listener_comprehensive.py  test_listener_race.py  test_pack.py  test_pack_race.py  test_password_change_session.py  test_rate_limit.py  test_retry_task.py  test_security_utils.py  test_session_fixation.py  (+9 more)
frontend/: jest.config.cjs  jest.setup.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo  types.ts
(+66 files in other folders)
