[project]
name = "aria2-controler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "aiohttp==3.9.5",
    "pydantic-settings==2.3.4",
    "sqlmodel>=0.0.31",
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.1",
]
